--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -13,7 +13,9 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
+    "https": "^1.0.0",
     "sharp": "^0.32.1"
   }
 }
